# diplodoc_test

./: CMakeLists.txt
.github/workflows/: build_docs.yml  release_docs.yml
docs-html/en/: about.html  anotherpage.html  index.html  page.html
docs-html/en/sub-section/: content.html  index.html
src/: bot_setup.hpp  config.hpp  handlers.cpp  handlers.hpp  keyboard_markups.cpp  keyboard_markups.hpp  logging.hpp  main.cpp  tg_bot_utils.hpp
